src/test/ui/variance/variance-invariant-self-trait-match.stderr
error[E0308]: mismatched types
  --> $DIR/variance-invariant-self-trait-match.rs:10:5
   |
LL |     impls_get::<&'min G>();
   |     ^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `<&'min G as Get>`
              found type `<&'max G as Get>`
note: the lifetime `'min` as defined here...
  --> $DIR/variance-invariant-self-trait-match.rs:7:21
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime `'max` as defined here
  --> $DIR/variance-invariant-self-trait-match.rs:7:27
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                           ^^^^

error[E0308]: mismatched types
  --> $DIR/variance-invariant-self-trait-match.rs:16:5
   |
LL |     impls_get::<&'max G>();
   |     ^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `<&'max G as Get>`
              found type `<&'min G as Get>`
note: the lifetime `'min` as defined here...
  --> $DIR/variance-invariant-self-trait-match.rs:13:21
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime `'max` as defined here
  --> $DIR/variance-invariant-self-trait-match.rs:13:27
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                           ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
